freehold template, add freehold-footer, fix banner logo issue, fix errors on freehold-tab-white

--- a/share/freehold-banner.html
+++ b/share/freehold-banner.html
@@ -1,5 +1,5 @@
 <div id="banner">
-    <img class="logo" alt="Image Description" src="imgs/dental-harmony-logo.png">
+    <a class="logo" href="/"><img alt="Image Description" src="imgs/dental-harmony-logo.png"></a>
 
     <span>Freehold, NJ Office</span>
 
