--- a/share/main-banner.html
+++ b/share/main-banner.html
@@ -1,6 +1,6 @@
 <div id="banner">
             
-    <img class="logo" alt="Image Description" src="imgs/dental-harmony-logo.png">
+    <a class="logo" href="/"><img alt="Image Description" src="imgs/dental-harmony-logo.png"></a>
 
     <span>Making a Difference</span>
 
