--- a/share/hamilton-footer.html
+++ b/share/hamilton-footer.html
@@ -6,22 +6,7 @@
     
         <section>
             <h2>Have a question?</h2>
-            For any questions, you can call us at Dental Harmony Hamilton at <a href="tel:609-981-7145">(609) 981-7145</a>. You can also send us a message by using the form below:<br>
-
-            <form>
-                <ul>
-                <li>
-                    <input type="text" id="name" placeholder="Name">
-                </li>
-                <li>
-                    <textarea rows="6" id="message" placeholder="Message"></textarea>
-                </li>
-
-                <li>
-                    <input type="submit" value="Send">
-                </li>
-                </ul>
-            </form>
+            <p>At Dental  Harmony of Hamilton we value the people that we are privileged to treat. We bring our decades of experience to our communities, and we are passionate about creating healthy, attractive smiles.   Your dental health  is our top priority. If you're a long time patient or someone new,  call us with any questions at Dental Harmony of Hamilton, NJ at <a href="tel:609-981-7145">(609) 981-7145</a>.</p>
         </section>
 
         <section>
