update to sub-nav.html menu and css

--- a/sub-nav.html
+++ b/sub-nav.html
@@ -10,18 +10,46 @@
 
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/">Meet the Team</a></li>
-        <li><a href="/">Office Tour</a></li>
-        <li><a href="/">About Us</a></li>
-        <li><a href="/">Dental Implants</a></li>
-        <li><a href="/">Preventative Dentistry</a></li>
-        <li><a href="/">Forms &amp; Insurance</a></li>
-
-
-        <li class="sub-nav"><a href="/"><br>Sub navigation One</a></li>
-        <li class="sub-nav"><a href="/">Sub navigation Two</a></li>
-        <li class="sub-nav"><a href="/">Sub navigation with a really long name so this is how it will look</a></li>
-        <li class="sub-nav"><a href="/">Sub navigation Four</a></li>
+        <li><a href="/">About our Office</a>
+            <ul class="sub-nav">
+                <li><a href="/"><br>About our Office One</a></li>
+                <li><a href="/"><br>About our Office Two</a></li>
+                <li><a href="/"><br>About our Office Three</a></li>
+                <li><a href="/"><br>About our Office Four</a></li>
+                <li><a href="/"><br>About our Office Five</a></li>
+                <li><a href="/"><br>About our Office Six</a></li>
+                <li><a href="/"><br>About our Office Seven</a></li>
+                <li><a href="/"><br>About our Office Eight</a></li>
+                <li><a href="/"><br>About our Office Nine</a></li>
+            </ul>
+        </li>
+        <li><a href="/">Patient Info</a>
+            <ul class="sub-nav">
+                <li><a href="/"><br>Patient Info One</a></li>
+                <li><a href="/"><br>Patient Info Two</a></li>
+                <li><a href="/"><br>Patient Info Three</a></li>
+            </ul>
+        </li>
+        <li><a href="/">Dental Services</a>
+            <ul class="sub-nav">
+                <li><a href="/"><br>Dental Services One</a></li>
+                <li><a href="/"><br>Dental Services Two</a></li>
+                <li><a href="/"><br>Dental Services Three</a></li>
+                <li><a href="/"><br>Dental Services Four</a></li>
+                <li><a href="/"><br>Dental Services Five</a></li>
+                <li><a href="/"><br>Dental Services Six</a></li>
+                <li><a href="/"><br>Dental Services Seven</a></li>
+            </ul>
+        </li>
+        <li><a href="/">Dental Implants</a>
+            <ul class="sub-nav">
+                <li><a href="/"><br>Dental Implants One</a></li>
+                <li><a href="/"><br>Dental Implants Two</a></li>
+                <li><a href="/"><br>Dental Implants Three</a></li>
+                <li><a href="/"><br>Dental Implants Four</a></li>
+            </ul>
+        </li>
+        <li><a href="/">Contact Us</a><br><br></li>
     </ul>
 
 </nav>
